<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_worker">

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.example.myapplication.ui.record.RecordFragment"
        android:label="@string/title_record"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.example.myapplication.ui.wallet.WalletAddedWorker"
        android:label="@string/title_wallet"
        tools:layout="@layout/wallet_added_worker" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_worker"
        android:name="com.example.myapplication.ui.order.AfterCompleteWorker"
        android:label="@string/title_worker_order"
        tools:layout="@layout/activity_after_complete_worker" />
</navigation>