<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.wallet.WalletFragment"
    >

        <ImageView
                android:id="@+id/backToBankAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="0dp"
                />

        <TextView
            android:id="@+id/showBankAccout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/backToBankAccount"
            android:layout_centerHorizontal="true"
            android:text="@string/bank"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/clickAddBankAcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_button"
            android:text="@string/add"
            android:textSize="35sp" />

        <TextView
                android:id="@+id/addText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addBankAcount"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_below="@+id/clickAddBankAcount"
                android:layout_centerInParent="true"
                />

    </RelativeLayout>